# Simple-Near-Smart-Contract

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
